Fix bugs with optional settings

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </main>
     </div>
 
-    <script type="module" src="app.js"></script>
+    <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
