Add show model counts

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                                 >
                                 <span class="ml-2 text-sm text-gray-700">Smart format</span>
                             </label>
+                            <label class="inline-flex items-center">
+                                <input
+                                    type="checkbox"
+                                    id="show-models"
+                                    class="form-checkbox h-4 w-4 text-blue-500"
+                                >
+                                <span class="ml-2 text-sm text-gray-700">Show model counts</span>
+                            </label>
                             <button
                                 id="copy-button"
                                 class="px-3 py-1 text-sm bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors"
