Add dropdown for the formatting options

--- a/index.html
+++ b/index.html
@@ -48,32 +48,43 @@
                     <div class="flex justify-between items-center mb-2">
                         <h2 class="text-lg font-medium text-gray-800">Cleaned Roster</h2>
                         <div class="flex items-center space-x-4">
-                            <label class="inline-flex items-center">
-                                <input
-                                    type="checkbox"
-                                    id="show-points"
-                                    class="form-checkbox h-4 w-4 text-blue-500"
-                                    checked
-                                >
-                                <span class="ml-2 text-sm text-gray-700">Show points</span>
-                            </label>
-                            <label class="inline-flex items-center">
-                                <input
-                                    type="checkbox"
-                                    id="smart-format"
-                                    class="form-checkbox h-4 w-4 text-blue-500"
-                                    checked
-                                >
-                                <span class="ml-2 text-sm text-gray-700">Smart format</span>
-                            </label>
-                            <label class="inline-flex items-center">
-                                <input
-                                    type="checkbox"
-                                    id="show-models"
-                                    class="form-checkbox h-4 w-4 text-blue-500"
-                                >
-                                <span class="ml-2 text-sm text-gray-700">Show model counts</span>
-                            </label>
+                            <div class="relative inline-block text-left">
+                                <div>
+                                    <button type="button" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-100 focus:ring-blue-500" id="options-menu-button" aria-haspopup="true" aria-expanded="true">
+                                        Options
+                                    </button>
+                                </div>
+                                <div id="options-menu" class="origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="options-menu-button">
+                                    <div class="py-1" role="none">
+                                        <label class="flex items-center px-4 py-2 text-sm text-gray-700">
+                                            <input
+                                                type="checkbox"
+                                                id="show-points"
+                                                class="form-checkbox h-4 w-4 text-blue-500"
+                                                checked
+                                            >
+                                            <span class="ml-2">Show points</span>
+                                        </label>
+                                        <label class="flex items-center px-4 py-2 text-sm text-gray-700">
+                                            <input
+                                                type="checkbox"
+                                                id="smart-format"
+                                                class="form-checkbox h-4 w-4 text-blue-500"
+                                                checked
+                                            >
+                                            <span class="ml-2">Smart format</span>
+                                        </label>
+                                        <label class="flex items-center px-4 py-2 text-sm text-gray-700">
+                                            <input
+                                                type="checkbox"
+                                                id="show-models"
+                                                class="form-checkbox h-4 w-4 text-blue-500"
+                                            >
+                                            <span class="ml-2">Show model counts</span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                             <button
                                 id="copy-button"
                                 class="px-3 py-1 text-sm bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors"
