--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
                                             >
                                             <span class="ml-2">Consolidate duplicates</span>
                                         </label>
+                                        <label class="flex items-center px-4 py-2 text-sm text-gray-700">
+                                            <input
+                                                type="checkbox"
+                                                id="one-liner"
+                                                class="form-checkbox h-4 w-4 text-blue-500"
+                                            >
+                                            <span class="ml-2">One-liner output</span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
