--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                                         <label class="flex items-center px-4 py-2 text-sm text-gray-700">
                                             <input
                                                 type="checkbox"
+                                                id="inline-enhancements"
+                                                class="form-checkbox h-4 w-4 text-blue-500"
+                                                checked
+                                            >
+                                            <span class="ml-2">Inline enhancements</span>
+                                        </label>
+                                        <label class="flex items-center px-4 py-2 text-sm text-gray-700">
+                                            <input
+                                                type="checkbox"
                                                 id="show-points"
                                                 class="form-checkbox h-4 w-4 text-blue-500"
                                                 checked
