--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap');
+        
+        /* Prevent iOS automatic zoom on input focus while preserving user zoom */
+        @media screen and (max-width: 768px) {
+            input:focus, textarea:focus, select:focus {
+                font-size: 16px !important;
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen">
