feat: add Discord-friendly copy option with markdown code block formatting
- Add "Discord-friendly format" checkbox to options menu (UI and DOM)
- When enabled, copy button wraps output in triple backticks for Discord markdown
- Output display remains unchanged; formatting only applied to clipboard copy
- Update setupCopyButton and DOM utilities to support new option
- Add/adjust unit, integration, and DOM utility tests for new feature
- Ensure full TDD: all tests pass, maintain modular and maintainable code

--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
                                             >
                                             <span class="ml-2">One-liner output</span>
                                         </label>
+                                        <label class="flex items-center px-4 py-2 text-sm text-gray-700">
+                                            <input
+                                                type="checkbox"
+                                                id="discord-format"
+                                                class="form-checkbox h-4 w-4 text-blue-500"
+                                            >
+                                            <span class="ml-2">Discord-friendly format</span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
