--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
                                             >
                                             <span class="ml-2">Discord-friendly format</span>
                                         </label>
+                                        <label class="flex items-center px-4 py-2 text-sm text-gray-700">
+                                            <input
+                                                type="checkbox"
+                                                id="hide-header"
+                                                class="form-checkbox h-4 w-4 text-blue-500"
+                                            >
+                                            <span class="ml-2">Hide header</span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
