--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="space-y-6">
                 <div class="bg-white rounded-lg shadow-sm p-4">
                     <label for="roster-input" class="block text-sm font-medium text-gray-700 mb-2">
-                        Paste your roster here or drag and drop a file
+                        Paste or drag and drop your roster here
                     </label>
                     <textarea
                         id="roster-input"
