refactor(ui): rename "Hide roster header" to "Show roster header" with inverted logic
- Change checkbox label from "Hide roster header" to "Show roster header"
- Make checkbox checked by default (show header by default)
- Rename all code references from hideHeader to showHeader for consistency
- Update cleanRosterText to expect showHeader option instead of hideHeader
- Invert logic: checked = show header, unchecked = hide header
- Update all tests to use showHeader naming and logic
- Maintain backward compatibility in business logic

This makes the UI more intuitive - users expect "Show" to mean the feature is enabled when checked.

--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
                                         <label class="flex items-center px-4 py-2 text-sm text-gray-700 whitespace-nowrap">
                                             <input
                                                 type="checkbox"
-                                                id="hide-header"
+                                                id="show-header"
                                                 class="form-checkbox h-4 w-4 text-blue-500"
+                                                checked
                                             >
-                                            <span class="ml-2 truncate">Hide roster header</span>
+                                            <span class="ml-2 truncate">Show roster header</span>
                                         </label>
                                         <label class="flex items-center px-4 py-2 text-sm text-gray-700 whitespace-nowrap">
                                             <input
