Improve Discord-friendly format option UX
- Add explanatory description 'Shows in copied text only' below the option
- Style description with proper indentation and spacing to clearly associate with the option
- Change 'Consolidate duplicate units' to 'Merge duplicate units' for better clarity

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                                 id="consolidate-duplicates"
                                                 class="form-checkbox h-4 w-4 text-blue-500"
                                             >
-                                            <span class="ml-2 truncate">Consolidate duplicate units</span>
+                                            <span class="ml-2 truncate">Merge duplicate units</span>
                                         </label>
                                         <label class="flex items-center px-4 py-2 text-sm text-gray-700 whitespace-nowrap">
                                             <input
@@ -151,6 +151,9 @@
                                             >
                                             <span class="ml-2 truncate">Discord-friendly format</span>
                                         </label>
+                                        <div class="px-10 -mt-3 py-1 text-xs text-gray-500">
+                                            Shows in copied text only
+                                        </div>
                                     </div>
                                 </div>
                             </div>
