feat: wrap keyboard shortcuts in <kbd> elements for better accessibility
- Update getKeyboardShortcutText() to return HTML with <kbd> tags
- Use innerHTML for copy button text to render <kbd> elements properly
- Add CSS styling for <kbd> elements to look like keyboard keys
- Update tests to check innerHTML for shortcut labels and textContent for feedback
- Maintain textContent for "Copied!" feedback state for security

The Copy button now displays keyboard shortcuts like "Copy (<kbd>CMD</kbd>+<kbd>C</kbd>)"
instead of plain text, improving visual clarity and accessibility.

--- a/index.html
+++ b/index.html
@@ -9,25 +9,16 @@
     <meta name="theme-color" content="#1a1a1a">
     <link rel="icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        mono: ['JetBrains Mono', 'monospace'],
-                    }
-                }
-            }
-        }
-    </script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap');
-        
         /* Prevent iOS automatic zoom on input focus while preserving user zoom */
         @media screen and (max-width: 768px) {
             input:focus, textarea:focus, select:focus {
                 font-size: 16px !important;
             }
+        }
+
+        kbd {
+            font-size: 0.875rem !important;
         }
     </style>
 </head>
