--- a/index.html
+++ b/index.html
@@ -191,17 +191,12 @@
         </div>
     </header>
 
-    <div class="container mx-auto px-4 py-6 max-w-4xl">
+    <div class="container mx-auto px-4 py-6 max-w-2xl">
         <main>
             <!-- Phase 1: Input Mode -->
             <div id="input-phase" class="space-y-6">
-                <div class="text-center mb-8">
-                    <h1 class="text-3xl font-bold text-primary mb-3">40K Army Cleaner</h1>
-                    <p class="text-lg text-secondary">Clean and format your Warhammer 40K roster</p>
-                </div>
-                
                 <div>
-                    <label for="roster-input" class="block text-sm font-medium text-secondary mb-3">
+                    <label for="roster-input" class="block text-xl font-semibold text-primary mb-4">
                         Paste or drag and drop your roster here
                     </label>
                     <textarea
@@ -242,7 +237,7 @@
                                     </svg>
                                     Options
                                 </button>
-                                <div id="options-menu" class="origin-top-right absolute right-0 mt-2 w-64 rounded-lg shadow-lg bg-secondary ring-1 ring-black ring-opacity-5 focus:outline-none hidden z-10" role="menu" aria-orientation="vertical" aria-labelledby="options-menu-button">
+                                <div id="options-menu" class="origin-top-right absolute right-0 mt-2 w-64 rounded-lg shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden z-10" role="menu" aria-orientation="vertical" aria-labelledby="options-menu-button">
                                     <div class="py-2" role="none">
                                         <!-- Content Display Options Group -->
                                         <div class="px-4 py-2 text-xs font-semibold text-muted uppercase tracking-wide">
